--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta property="og:title" content="HUT PJB 2023" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://felixitsme.github.io/hut-pjb/" />
-  <meta property="og:image" content="https://felixitsme.github.io/hut-pjb/assets/images/avatar-clear.png">
-  <meta property="og:image:type" content="image/png">
+  <meta property="og:image" content="https://felixitsme.github.io/hut-pjb/assets/images/link-img.jpg">
+  <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="200">
   <meta property="og:image:height" content="200">
   <meta property="og:description" content="Anniversarry PAGUYUBAN JEEP BANDUNG 1998 - 2023" />
