change button to link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img src="assets/images/avatar-clear.png" alt="avatar">
     </div>
     <div class="right-side">
-      <button type="button">Form Pendaftaran</button>
+      <a class="btn-link" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdjBZqqRCj-P9OWVZ4Hfdl29mgpS5kRBZWWrzFBVA2Thjdceg/viewform?usp=sf_link">Form Pendaftaran</a>
       <p class="lokasi">LOKASI:<br/>GREEN GRASS CIKOLE SITE - LEMBANG<br/>29 JULI 2023</p>
       <img src="assets/images/event-text.png" alt="event">
       <div class="contact">
